cabal-version:      3.4

name:               j4fsolver
version:            0.1.0.0

homepage:           https://github.com/squeakbug/j4fsolver

license:            MIT
license-file:       LICENSE

author:             squeakbug73
maintainer:         squeakbug73@outlook.com

category:           Math
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  
        LibSolver
        LibSolver.BoolExpr
        LibSolver.Executor
        LibSolver.Graph
        LibSolver.Propositional
        LibSolver.Propositional.Forward
        LibSolver.Propositional.Backward
        LibSolver.SAT
        LibSolver.Search
        LibSolver.Search.AStar
        LibSolver.Search.Bfs
        LibSolver.Search.Dfs
        LibSolver.Search.Heuristic
        LibSolver.Search.InfoSearch
        LibSolver.Search.SearchState

    build-depends:
          aeson
        , base ^>=4.17.2.1
        , combinat
        , containers
        , graphviz
        , lens
        , megaparsec
        , relude
        , split
        , template-haskell
        , transformers
        , vector
        , utf8-string

    hs-source-dirs:   src
    default-language: GHC2021

executable j4fsolver
    import:           warnings
    main-is:          Main.hs
    build-depends:
          base ^>=4.17.2.1
        , j4fsolver
        , containers
        , split
        , transformers
        , prettyprinter
        , lens
        , template-haskell

    hs-source-dirs:   app
    default-language: GHC2021

executable eight-queens
    import:           warnings
    main-is:          Main.hs
    build-depends:
          base ^>=4.17.2.1
        , j4fsolver
        , containers
        , split
        , relude
        , transformers
        , prettyprinter
        , lens
        , template-haskell

    hs-source-dirs:   examples/EightQueens
    default-language: GHC2021

test-suite j4fsolver-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
          base ^>=4.17.2.1
        , j4fsolver
        , QuickCheck
