cabal-version:      3.4

name:               j4fsolver
version:            0.1.0.0

homepage:           https://github.com/squeakbug/j4fsolver

license:            MIT
license-file:       LICENSE

author:             squeakbug
maintainer:         squeakbug73@outlook.com

category:           Math
build-type:         Simple

extra-doc-files:    CHANGELOG.md

source-repository head
    type:     git
    location: https://github.com/squeakbug/j4fsolver

common warnings
    ghc-options: -Wall -O3

common executables-properties
    import:           warnings
    build-depends:
          base ^>=4.17.2.1
        , j4fsolver
        , relude
        , containers
        , deepseq
        , mtl
        , random
    default-language: GHC2021

library
    import:           warnings
    exposed-modules:  
        LibSolver
        LibSolver.Agent
        LibSolver.Agent.ModelBasedReflex
        LibSolver.Agent.SimpleReflex
        LibSolver.ASP
        LibSolver.BoolExpr
        LibSolver.BoolExpr.Circuit
        LibSolver.BoolExpr.CNF
        LibSolver.BoolExpr.DNF
        LibSolver.BoolExpr.Parser
        LibSolver.BoolExpr.Printer
        LibSolver.BoolExpr.SemiRing
        LibSolver.Compute
        LibSolver.Compute.Lambda
        LibSolver.Compute.LambdaTyped
        LibSolver.Compute.Markov
        LibSolver.Compute.Turing
        LibSolver.CSP
        LibSolver.CSP.AC3
        LibSolver.CSP.Backtracking
        LibSolver.CSP.HillClimbing
        LibSolver.Logic
        LibSolver.Logic.Combinatorial
        LibSolver.Logic.DefClause
        LibSolver.Logic.FirstOrder
        LibSolver.Logic.FirstOrder.Printer
        LibSolver.Logic.Modal
        LibSolver.Logic.Propositional
        LibSolver.Logic.Temporal
        LibSolver.Logic.ThreeValued
        LibSolver.Logic.TruthTable
        LibSolver.Planning
        LibSolver.Planning.PlanningProblem
        LibSolver.SAT
        LibSolver.SAT.Brootforce
        LibSolver.SAT.DPLL
        LibSolver.SAT.Reta
        LibSolver.SAT.WalkSAT
        LibSolver.Search
        LibSolver.Search.Compare
        LibSolver.Search.Core
        LibSolver.Search.Informed
        LibSolver.Search.Local
        LibSolver.Search.Uninformed
        LibSolver.Types
        LibSolver.Types.Graph
        LibSolver.Types.Graph.Parser
        LibSolver.Types.ProbDist
        LibSolver.Types.Queue
        LibSolver.Types.Table
        LibSolver.Types.WeightedGraph
        LibSolver.Types.WeightedGraph.Parser
        LibSolver.Util
        LibSolver.Util.Parser

    build-depends:
        -- Base
          base
        , relude
        , split

        -- Types
        , combinat
        , containers
        , monoidal-containers
        , psqueues
        , free
        , vector
        , data-fix
        , deepseq
        , lens
        , optics
        , lattices
        , transformers
        , mtl
        , tagged
        
        -- SerDes
        , aeson
        , megaparsec
        , parser-combinators
        , utf8-string
        , prettyprinter
        , graphviz

        -- Other
        , random
        , MonadRandom
        , template-haskell
        , stm
        , katip

    hs-source-dirs:   src
    ghc-options:      -Wall -O3
    default-language: GHC2021

executable latin-square
    import:           executables-properties
    main-is:          Main.hs
    hs-source-dirs:   examples/LatinSquare

executable map-coloring
    import:           executables-properties
    main-is:          Main.hs
    hs-source-dirs:   examples/MapColoring

executable nqueens
    import:           executables-properties
    main-is:          Main.hs
    hs-source-dirs:   examples/NQueens

executable place-and-route
    import:           executables-properties
    main-is:          Main.hs
    hs-source-dirs:   examples/PlaceAndRoute

executable rubik
    import:           executables-properties
    main-is:          Main.hs
    hs-source-dirs:   examples/Rubik

executable search-in-graph
    import:           executables-properties
    main-is:          Main.hs
    hs-source-dirs:   examples/SearchInGraph

executable sudoku
    import:           executables-properties
    main-is:          Main.hs
    hs-source-dirs:   examples/Sudoku

executable tag
    import:           executables-properties
    main-is:          Main.hs
    hs-source-dirs:   examples/Tag

test-suite j4fsolver-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
          base ^>=4.17.2.1
        , j4fsolver
        , QuickCheck
        , tasty
        , hspec

test-suite j4fsolver-style
    type:             exitcode-stdio-1.0
    main-is:          HLint.hs
    hs-source-dirs:   test
    default-language: GHC2021
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base >=4.7 && <5,
        hlint >=1.0 && <4
